# ToTemp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yaml  pytest.yml
doc/: requirements.txt
doc/source/: conf.py  totemp.rst
docs/html/: .buildinfo  genindex.html  index.html  installation_usage.html  intro.html  objects.inv  search.html  searchindex.js  totemp.html
docs/source/: conf.py  index.rst  installation.rst  installation_usage.rst  intro.rst  totemp.rst
tests/: __init__.py  test_funcs.py  test_totemp.py
totemp/: __init__.py  temperature_types.py
