[tool.poetry]
name = "totemp"
version = "0.3.0"
description = "Temperature Converter"
license = "MIT"
authors = [
    "Edson Pimenta <edson.tibo@gmail.com>",
    "Dávilos Tavares <daviloscostagg@hotmail.com>",
]
maintainers = [
    "Edson Pimenta <edson.tibo@gmail.com>",
    "Dávilos Tavares <daviloscostagg@hotmail.com>",
]
readme = "README.md"
homepage = "https://github.com/eddyyxxyy/ToTemp"
keywords = [
    "converter", "temperature", "celsius",
    "kelvin", "fahrenheit", "rankine",
    "delisle", "Newton", "Réaumur",
    "Rømer"
]
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Scientific/Engineering :: Mathematics',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent'
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-coverage = "^0.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
