[tool.poetry]
name = "totemp"
version = "0.5.1"
description = "Temperature Converter"
license = "GPL-3.0-only"
authors = [
    "Edson Pimenta <edson.tibo@gmail.com>",
    "Dávilos Tavares <daviloscostagg@hotmail.com>",
    "Raul Silva <raul_bardela@hotmail.com>"
]
maintainers = [
    "Edson Pimenta <edson.tibo@gmail.com>",
    "Dávilos Tavares <daviloscostagg@hotmail.com>",
    "Raul Silva <raul_bardela@hotmail.com>"
]
readme = "README.md"
homepage = "https://github.com/eddyyxxyy/ToTemp"
documentation = "https://totemp.readthedocs.io/en/latest/"
keywords = [
    "converter", "temperature", "celsius",
    "kelvin", "fahrenheit", "rankine",
    "delisle", "Newton", "Réaumur",
    "Rømer"
]
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Scientific/Engineering :: Mathematics',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Operating System :: OS Independent'
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-coverage = "^0.0"
mypy = "^0.982"
sphinx = "^5.3.0"
numpydoc = "^1.5.0"
sphinx-autodoc-typehints = "^1.19.5"
sphinx-rtd-theme = "^1.1.1"
sphinxcontrib-prettyspecialmethods = "^0.1.0"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
